Imports respect instance units
* Fetch and use instance's units for tree imports
* Refactor nearby code
* Respect unit conversions when validating against species max diameter/height
* Make tests actually test these things

Also tweak units warning:
* Show tree units first
* "Plot" -> "Planting Site"
* Tweak spacing

To test:
1) Make an instance centered on Minneapolis
2) Change units to metric for tree and plot fields (cm for diameter, m for the rest)
3) Import `//fileshare/users/rmohr/notes/otm/importer/minneapolis1.csv`
4) Verify values are correct by looking at tree detail

Connects #189

--- a/opentreemap/importer/templates/importer/partials/imports.html
+++ b/opentreemap/importer/templates/importer/partials/imports.html
@@ -17,18 +17,18 @@
                   <div class="input-group">
                     {% trans "CSV to Upload:" %} <input type="file" name="file" accept="text/csv,.csv">
                   </div><!-- /input-group -->
-                  <div id="importer-tree-units" style="display: none;">
+                  <div id="importer-tree-units" style="display: none; padding-top:10px">
                     {% with u=importer_instance_units %}
                     {% with pl=u.plot_length pw=u.plot_width td=u.tree_diameter th=u.tree_height tch=u.tree_canopy_height %}
                     {% blocktrans %}
                     <h5>Unit Warning</h5>
                     <p>The following units are used for your tree map.</p>
                     <p>Please ensure that your file contains measurements of the same unit.</p>
-                    <p>Plot Length: {{ pl }}</p>
-                    <p>Plot Width: {{ pw }}</p>
                     <p>Tree Diameter: {{ td }}</p>
                     <p>Tree Height: {{ th }}</p>
                     <p>Tree Canopy Height: {{ tch }}</p>
+                    <p>Planting Site Length: {{ pl }}</p>
+                    <p>Planting Site Width: {{ pw }}</p>
                     {% endblocktrans %}
                     {% endwith %}
                     {% endwith %}
