Finesse multiline treemap titles

--- a/opentreemap/treemap/css/sass/partials/pages/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_admin.scss
@@ -61,6 +61,7 @@
 
                 .brand {
                     color: $paper;
+                    padding: .5em .5em .5em 0;
                 }
             }
 
