fixes issue for otm-addon repo with header buttons overflowing

--- a/opentreemap/treemap/templates/treemap/partials/form_buttons.html
+++ b/opentreemap/treemap/templates/treemap/partials/form_buttons.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div class="col-xs-4 text-right">
+<div class="page-header-actions">
     <img class="spinner" src="{{ STATIC_URL }}img/spinner.gif" style="display: none;">
     {% block other_buttons %}
     {% endblock other_buttons %}
