fixes #2335. New spinner gif and css to fix jagged edges

--- a/opentreemap/treemap/css/sass/partials/pages/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_admin.scss
@@ -197,7 +197,9 @@
                 }
 
                 .spinner {
-                    padding-right: 5px;
+                    background: #fff;
+                    border-radius: 50%;
+                    margin-right: 5px;
                 }
             }
 
