--- a/opentreemap/otm_comments/templates/otm_comments/partials/moderation.html
+++ b/opentreemap/otm_comments/templates/otm_comments/partials/moderation.html
@@ -8,7 +8,7 @@
   <div class="page-header-title">
       <h1>{% trans "Comments" %}</h1>
   </div>
-  <div class="page-header-actions">
+  <div class="page-header-actions pull-right">
       {% include 'treemap/partials/filter_dropdown.html' with filter=comments_filter %}
       <button type="button" class="btn btn-sm" data-export-start-url="{% url 'comments-csv' request.instance.url_name %}?{{ comments_params }}"><i class="icon-export"></i>{% trans "Export All" %}</button>
   </div>
