--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -30,19 +30,36 @@
 
     {% block head_extra %}
     {% endblock head_extra %}
+
+    {% if settings.GLOBAL_GOOGLE_ANALYTICS_ID and settings.APP_GOOGLE_ANALYTICS_ID %}
+    <!-- Google Analytics -->
+    <script>
+    (function() {
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', '{{ settings.APP_GOOGLE_ANALYTICS_ID }}', 'auto');
+      ga('create', '{{ settings.GLOBAL_GOOGLE_ANALYTICS_ID }}', 'auto', 'global');
+      ga('require', 'autotrack');
+      ga('global.require', 'autotrack');
+
+      {% if request.user.is_authenticated %}
+      ga('set', 'userId', '{{ request.user.pk }}')
+      ga('global.set', 'userId', '{{ request.user.pk }}')
+      {% endif %}
+
+      {% block google_analytics_actions %}
+      ga('send', 'pageview');
+      ga('global.send', 'pageview');
+      {% endblock google_analytics_actions %}
+    })();
+    </script>
+    <!-- End Analytics -->
+    {% endif %}
   </head>
   <body>
-    {% if settings.GOOGLE_ANALYTICS_ID %}
-    <!-- Google Tag Manager -->
-    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-{{ settings.GOOGLE_ANALYTICS_ID }}"
-                      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-{{ settings.GOOGLE_ANALYTICS_ID }}');</script>
-    <!-- End Google Tag Manager -->
-    {% endif %}
     <div {% block outermost_atts %}{% endblock outermost_atts %} class="wrapper">
       {% block topnav %}
       <!-- Top Nav -->
@@ -208,6 +225,7 @@
 
     <script type="text/javascript">
       (function(require) {
+          require("autotrack");
           require("treemap/buttonEnabler").run({ config: otm.settings });
           require("treemap/export").run({ config: otm.settings });
       })(require);
