--- a/opentreemap/treemap/templates/treemap/map_feature_detail.html
+++ b/opentreemap/treemap/templates/treemap/map_feature_detail.html
@@ -89,8 +89,8 @@
             data-href="{{ request.get_full_path }}"
             data-is-favorited="{{ favorited }}"
             data-always-enable="{{ request.user.is_authenticated }}"
-            data-favorite-url="{% url 'favorite_map_feature' instance_url_name=request.instance.url_name feature_id=feature.id %}"
-            data-unfavorite-url="{% url 'unfavorite_map_feature' instance_url_name=request.instance.url_name feature_id=feature.id %}">
+            data-favorite-url="{% url 'favorite_map_feature' instance_url_name=request.instance.url_name feature_id=feature.pk %}"
+            data-unfavorite-url="{% url 'unfavorite_map_feature' instance_url_name=request.instance.url_name feature_id=feature.pk %}">
             {% if favorited %}
               <i id="favorite-star" class="icon-star"></i>
             {% else %}
@@ -277,7 +277,7 @@ var mapFeatureOptions = {
         deleteCancel: '#delete-cancel',
         deleteConfirmationBox: '#delete-confirmation-box',
     },
-    featureId: {{ feature.id }},
+    featureId: {{ feature.pk }},
     sidebar: '#sidebar',
     form: '#map-feature-form',
     inlineEditForm: {
