Add Ion.RangeSlider dependency
This is the range slider needed for the canopy percent filter.

--- a/opentreemap/treemap/css/sass/main.scss
+++ b/opentreemap/treemap/css/sass/main.scss
@@ -18,6 +18,7 @@
 @import "partials/footer";
 @import "partials/modals";
 @import "partials/error";
+@import "partials/slider";
 
 // -- Page Specific
 @import "partials/pages/map";
