Add canopy percent layer filter
Connects #2609

--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -8,6 +8,7 @@
 
 {% block searchscripts %}
 <script src="//maps.google.com/maps/api/js?v=3&sensor=false"></script>
+{% include "treemap/partials/canopy_filter_control.html" %}
 <script>
 (function(require) {
     var $ = require("jquery"),
