--- a/opentreemap/treemap/templates/treemap/map_feature_detail.html
+++ b/opentreemap/treemap/templates/treemap/map_feature_detail.html
@@ -293,7 +293,8 @@ var mapFeatureOptions = {
         panelId: '#add-photo-modal',
         dataType: 'html',
         imageContainer: '#photo-carousel',
-        lightbox: '#photo-lightbox'
+        lightbox: '#photo-lightbox',
+        fileExceedsMaximumFileSize: '{% trans "{0} exceeds the maximum file size of {1}" %}'
     },
     location: {
         edit: '#edit-location',
