Increase maximum upload size
Read `MAXIMUM_IMAGE_SIZE` from an environmental variable and pass that
value to the client-side JS instead of hard-coding it.

--- a/opentreemap/treemap/templates/treemap/map_feature_detail.html
+++ b/opentreemap/treemap/templates/treemap/map_feature_detail.html
@@ -294,7 +294,8 @@ var mapFeatureOptions = {
         dataType: 'html',
         imageContainer: '#photo-carousel',
         lightbox: '#photo-lightbox',
-        fileExceedsMaximumFileSize: '{% trans "{0} exceeds the maximum file size of {1}" %}'
+        fileExceedsMaximumFileSize: '{% trans "{0} exceeds the maximum file size of {1}" %}',
+        maxImageSize: {{ settings.MAXIMUM_IMAGE_SIZE }}
     },
     location: {
         edit: '#edit-location',
